<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">noomee</string>
    <string name="app_description">Guide to independence for your KID</string>
    <string name="sign_in_with_email">Sign In</string>
    <string name="sign_up_with_email">Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>

    <string name="title_registration">General information of a child</string>
    <string name="child_relation">Relation to the child</string>
    <string name="child_name">Child\’s name</string>
    <string name="child_age">Age</string>
    <string name="diagnose">Diagnosis</string>
    <string name="can_child_speak">Can child speak?</string>
    <string name="iq_level">IQ level / if there is any/</string>
    <string name="independence_level">Level of independence</string>
    <string name="promise">*Note, that you are giving a promise to noomee to give a small prize-encouragement to your child in the end of the day after finishing daily tasks. What he/she likes the most and will work hard for it to overcome difficult tasks. For example, if a child loves "Kinder", we use this as an encouragement. Remember that you are obligated to restrict the "Kinder" on the other occasions, so the child understands that it is a means of encouragement. The child must also clearly understands that after each task he/she receives "nums", which at the end of the day becomes a prize.</string>
    <string name="save">Save</string>

    <string name="welcome_child">Welcome, %s</string>
    <string name="welcome">Welcome</string>

    <string name="nums">Num</string>
    <string name="cont">Continue</string>
    <string name="good_night">Good Night</string>
    <string name="you_have_x_num">You have \n\n %d \n\n nums!</string>

    <string name="submit">Sign In</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="password_validation_message">Password should contain letters, numbers and symbols, not less than 8 characters</string>
    <string name="email_sent_message">Please check your email for verification link</string>

    <!-- Language Selection Activity -->
    <string name="select_language">select language</string>
    <string name="language">LANGUAGE</string>

    <!-- Parent Activity Part -->
    <string name="parent">Parent Control</string>
    <string name="child">Enter to child part</string>

    <string name="schedule_name_sample">Schedule Name</string>
    <string name="set_days">SET DAYS</string>
    <string name="day_schedule">DAY SCHEDULE</string>
    <string name="day_schedule_templates">Day Schedule Templates</string>

    <string name="plus_sign">+</string>

    <string name="new_template">New\nTemplate\n+</string>
    <string name="gender">Gender</string>
    <string name="choose_action">Choose Action</string>
    <string name="set_duration">Set Duration</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="log_out">Log Out</string>
    <string name="schedule_remove_message">Schedule Removed Successfully</string>
</resources>